[package]
name = "todo-cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# command line args processor
clap = { version = "4.0", features = ["derive"] }
# csv and serde for serializing and deserializing data from server
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
# to make http requests
reqwest = { version = "0.11", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
