[package]
name = "todo_cli_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# command line args processor
clap = { version = "4.0", features = ["derive"] }

# csv and serde for serializing and deserializing data from server
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"

# to make http requests
reqwest = { version = "0.11", features = ["blocking"] }

# for working with enums
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
